# zencoder-dashboard

./: .env.example  .gitignore  .ports.env  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml  e2e-tests.yml  unit-tests.yml
aggregation-worker/: Dockerfile  requirements.txt
aggregation-worker/app/: aggregator.py  config.py  consumer.py  enrichment.py  main.py
aggregation-worker/tests/: test_aggregator.py  test_clickhouse_writer.py  test_consumer.py  test_enrichment.py
analytics-api/: Dockerfile  requirements-dev.txt  requirements.txt
analytics-api/app/: config.py  json_response.py  main.py
analytics-api/tests/: test_integration.py  test_pages.py  test_unit.py
docs/: ROADMAP.md  adding-a-new-metric.md
docs/plans/: 2026-03-08-phase-6.1-improve-testing-design.md  2026-03-08-phase-6.1-improve-testing.md  2026-03-09-multi-metric-row-layout-design.md  2026-03-09-multi-metric-row-layout.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
ingestion/: Cargo.toml  Dockerfile
ingestion/src/: config.rs  lib.rs  main.rs  publisher.rs  validation.rs
ingestion/src/models/: event.rs
ingestion/src/routes/: events.rs  health.rs
ingestion/tests/: integration.rs
nginx/: nginx.conf
scripts/: npm.sh  setup-ports.sh  test.sh
simulator/: Dockerfile  package.json
simulator/src/: config.ts  index.ts  (+2 more)
specs/: 01-requirements.md  02-technical-implementation.md  03-testing.md  04-step-by-step-plan.md
(+165 files in other folders)
